; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libsamplerate/extr_samplerate.c_src_get_description.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libsamplerate/extr_samplerate.c_src_get_description.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @src_get_description(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i8* @sinc_get_description(i32 %5)
  store i8* %6, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** %2, align 8
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i8* @zoh_get_description(i32 %11)
  store i8* %12, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  store i8* %15, i8** %2, align 8
  br label %23

16:                                               ; preds = %10
  %17 = load i32, i32* %3, align 4
  %18 = call i8* @linear_get_description(i32 %17)
  store i8* %18, i8** %4, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %23

22:                                               ; preds = %16
  store i8* null, i8** %2, align 8
  br label %23

23:                                               ; preds = %22, %20, %14, %8
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}

declare dso_local i8* @sinc_get_description(i32) #1

declare dso_local i8* @zoh_get_description(i32) #1

declare dso_local i8* @linear_get_description(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
